Adicionado end point para cadastrar funcionário, recuperar senha e enviar email para validação do processo.

--- a/server/src/views/recoverPassword.ejs
+++ b/server/src/views/recoverPassword.ejs
@@ -71,7 +71,7 @@
         const url = window.location.href.split('/')
         mHeaders.append('Authorization', url[ url.length - 1 ])
         mHeaders.append('Content-Type', 'application/json')
-        fetch('http://localhost:3000/user/change-password', {
+        fetch('http://localhost:3000/<%= entity %>/change-password', {
             method: 'PATCH',
             headers: mHeaders,
             body: JSON.stringify({ password })
