--- a/web/bus-locator/src/App.css
+++ b/web/bus-locator/src/App.css
@@ -1,6 +1,27 @@
 html, body, #root {
   margin: 0px;
   padding: 0px;
-  height: 100vh
+  min-height: 100vh
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 4px
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
