Corrigido erros de recuperação de conta e usuário logado.

--- a/server/src/views/recoverPassword.ejs
+++ b/server/src/views/recoverPassword.ejs
@@ -70,8 +70,9 @@
         const mHeaders = new Headers()
         const url = window.location.href.split('/')
         mHeaders.append('Authorization', url[ url.length - 1 ])
+        mHeaders.append('Accept', 'application/json')
         mHeaders.append('Content-Type', 'application/json')
-        fetch('http://localhost:3000/<%= entity %>/change-password', {
+        fetch('http://localhost:3001/<%= entity %>/change-password', {
             method: 'PATCH',
             headers: mHeaders,
             body: JSON.stringify({ password })
@@ -86,6 +87,7 @@
         })
         .catch(e => {
             console.log('ERROR: ', e)
+            $('#alertErrorRequest').show()
         })
     }
 
