--- a/server/src/views/recoverPassword.ejs
+++ b/server/src/views/recoverPassword.ejs
@@ -72,7 +72,7 @@
         mHeaders.append('Authorization', url[ url.length - 1 ])
         mHeaders.append('Accept', 'application/json')
         mHeaders.append('Content-Type', 'application/json')
-        fetch('http:// '+ process.env.URI +':3001/<%= entity %>/change-password', {
+        fetch('http://ec2-18-228-196-51.sa-east-1.compute.amazonaws.com:3001/<%= entity %>/change-password', {
             method: 'PATCH',
             headers: mHeaders,
             body: JSON.stringify({ password })
